Fix for stored procedures BUG#4726: Stored procedure crash when looping over SELECT with complex WHERE's.