sql/sql_prepare.cc
@@ -1671,7 +1671,10 @@ static void reset_stmt_for_execute(Prepared_statement *stmt)
       Copy WHERE clause pointers to avoid damaging they by optimisation
     */
     if (sl->prep_where)
+    {
       sl->where= sl->prep_where->copy_andor_structure(thd);
+      sl->where->cleanup();
+    }
     DBUG_ASSERT(sl->join == 0);
     ORDER *order;
     /* Fix GROUP list */
